# backend

./: .gitignore  README.md  config.py  main.py  pyproject.toml
app/: asgi.py  dependencies.py
app/api/: router.py
app/api/v1/: logging.py  router.py
app/api/v1/controllers/: abstract_controller.py  games_controller.py  redis_controller.py
app/api/v1/exceptions/: already_exists_error.py  api_error.py  api_exception.py  invalid_api_key_error.py  not_found_error.py
app/api/v1/models/: game.py
app/api/v1/models/data/: game.py
app/api/v1/models/response/: game.py
app/api/v1/routers/: games_router.py
app/api/v1/security/: authenticator.py
